tests/ui/resolve/issue-101749-2.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `rect`
  --> $DIR/issue-101749-2.rs:14:13
   |
LL |     let _ = rect::area();
   |             ^^^^ use of unresolved module or unlinked crate `rect`
   |
   = help: if you wanted to use a crate named `rect`, use `cargo add rect` to add it to your `Cargo.toml`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
